syntax = "proto3";

package vitepb;

message AccountBlockDb {
    bytes to = 1;
    bytes prevHash = 2;
    bytes fromHash = 3;

    bytes hash = 4;

    bytes tokenId = 5;
    bytes amount = 6;
    bytes balance = 7;

    string data = 8;
    bytes snapshotTimestamp = 9;

    uint64 timestamp = 10;

    bytes signature = 11;

    bytes nounce = 12;

    bytes difficulty = 13;

    bytes fAmount = 14;
}

message AccountBlockMeta {
    bytes accountId = 1;
    bytes height = 2;
    uint32 status = 3;
    bool isSnapshotted = 4;
}